# patch-seq

./: Cargo.toml  MIGRATION_5.0.md  MIGRATION_5.5.md  README.md  book.toml  justfile
.github/workflows/: bench-calibrate.yml  bench.yml  ci-linux.yml  ci-macos.yml  docs.yml  release.yml
benchmarks/: LATEST_RUN.txt  README.md  run.sh
benchmarks/baseline/: collections_python.txt  collections_rust.txt  collections_seq.txt  fanout_go.txt  fanout_python.txt  fanout_rust.txt  fanout_seq.txt  fibonacci_go.txt  fibonacci_python.txt  fibonacci_rust.txt  fibonacci_seq.txt  pingpong_go.txt  pingpong_python.txt  pingpong_rust.txt  pingpong_seq.txt  primes_go.txt  primes_python.txt  primes_seq.txt  skynet_go.txt  skynet_python.txt  skynet_rust.txt  skynet_seq.txt
benchmarks/collections/: seq.seq
benchmarks/fanout/: seq.seq
benchmarks/results/: collections_seq.txt  fanout_go.txt  (+16 more)
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  builtins.rs  call_graph.rs  capture_analysis.rs  config.rs  error_flag_lint.rs  ffi.rs  lib.rs  lint.rs  lints.toml  main.rs  normalize.rs  parser.rs  resolver.rs  resource_lint.rs  script.rs  stdlib_embed.rs  test_runner.rs  typechecker.rs  types.rs  unification.rs
crates/compiler/src/ast/: program.rs  tests.rs  types.rs
crates/compiler/src/builtins/: adt.rs  arith.rs  callable.rs  concurrency.rs  diagnostics.rs  docs.rs  float.rs  fs.rs  io.rs  list.rs  macros.rs  map.rs  os.rs  stack.rs  tcp.rs  tests.rs  text.rs  udp.rs
crates/compiler/src/call_graph/: tests.rs
crates/compiler/src/capture_analysis/: tests.rs
crates/compiler/src/codegen/: control_flow.rs  debug_info.rs  ffi_wrappers.rs  globals.rs  layout.rs  mod.rs  program.rs  runtime.rs  specialization.rs  state.rs  statements.rs  tests.rs  types.rs  virtual_stack.rs  words.rs
crates/compiler/src/codegen/inline/: dispatch.rs  mod.rs  ops.rs  shuffle.rs
crates/compiler/src/codegen/runtime/: adt.rs  args_exit.rs  arith.rs  callable.rs  closure.rs  collections.rs  concurrency.rs  float.rs  fs.rs  misc.rs  os.rs  stack.rs  stdio.rs  tcp.rs  test_time.rs  text.rs  udp.rs
crates/compiler/src/codegen/specialization/: codegen_calls.rs  codegen_ops.rs  codegen_safe_math.rs  codegen_word.rs  context.rs  eligibility.rs  types.rs
crates/compiler/src/config/: tests.rs
crates/compiler/src/error_flag_lint/: analyzer.rs  state.rs  tests.rs
crates/compiler/src/ffi/: bindings.rs  manifest.rs  tests.rs
crates/compiler/src/lib/: tests.rs
crates/compiler/src/lint/: linter.rs  tests.rs  types.rs
crates/compiler/src/main/: build.rs  lint.rs  test.rs  venv.rs
crates/compiler/src/parser/: cursor.rs  driver.rs  items.rs  statements.rs  tests.rs  token.rs  type_parse.rs
crates/compiler/src/resolver/: helpers.rs  tests.rs
crates/compiler/src/resource_lint/: program.rs  state.rs  tests.rs  word.rs
crates/compiler/src/script/: tests.rs
crates/compiler/src/test_runner/: tests.rs
crates/compiler/src/typechecker/: combinators.rs  control_flow.rs  driver.rs  freshen.rs  pick_roll.rs  quotations.rs  stack_utils.rs  state.rs  tests.rs  validation.rs  words.rs
crates/compiler/src/types/: tests.rs
crates/compiler/src/unification/: tests.rs
crates/compiler/stdlib/: control.seq  fmath.seq  http.seq  imath.seq  json.seq  list.seq  loops.seq  yaml.seq  zipper.seq
crates/core/: Cargo.toml
crates/core/src/: arena.rs  error.rs  lib.rs  memory_stats.rs  seqstring.rs  son.rs  stack.rs  stack_new.rs  stack_old.rs  tagged_stack.rs  value.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completion.rs  diagnostics.rs  includes.rs  main.rs
crates/repl/: Cargo.toml
crates/repl/src/: app.rs  engine.rs  lsp_client.rs  main.rs  run.rs  text_utils.rs
crates/repl/src/app/: tests.rs
crates/repl/src/ir/: stack_art.rs  stack_effects.rs
crates/repl/src/ui/: highlight.rs  ir_pane.rs  repl_pane.rs
crates/runtime/: Cargo.toml  lib.d
crates/runtime/src/: arithmetic.rs  bytes_ops.rs  channel.rs  closures.rs  combinators.rs  compress.rs  cond.rs  crypto.rs  encoding.rs  exit_code.rs  file.rs  float_ops.rs  http_client.rs  io.rs  lib.rs  list_ops.rs  map_ops.rs  os.rs  quotations.rs  regex.rs  report.rs  scheduler.rs  serialize.rs  signal.rs  string_ops.rs  tcp.rs  terminal.rs  test.rs  time_ops.rs  udp.rs  variant_ops.rs  weave.rs
crates/runtime/src/arithmetic/: arith.rs  bitwise.rs  compare.rs  peek.rs  tests.rs
crates/runtime/src/bytes_ops/: tests.rs
crates/runtime/src/channel/: tests.rs
crates/runtime/src/closures/: accessors.rs  construct.rs  env.rs  tests.rs
crates/runtime/src/compress/: tests.rs
crates/runtime/src/cond/: tests.rs
crates/runtime/src/crypto/: aes.rs  ed25519.rs  hash.rs  pbkdf.rs  random.rs  tests.rs
crates/runtime/src/encoding/: tests.rs
crates/runtime/src/exit_code/: tests.rs
crates/runtime/src/file/: tests.rs
crates/runtime/src/float_ops/: tests.rs
crates/runtime/src/http_client/: tests.rs
crates/runtime/src/io/: tests.rs
crates/runtime/src/list_ops/: access.rs  basic.rs  combinators.rs  tests.rs
crates/runtime/src/map_ops/: tests.rs
crates/runtime/src/os/: tests.rs
crates/runtime/src/quotations/: tests.rs
crates/runtime/src/regex/: tests.rs
crates/runtime/src/report/: tests.rs
crates/runtime/src/scheduler/: lifecycle.rs  registry.rs  spawn.rs  tests.rs  yield_ops.rs
crates/runtime/src/serialize/: tests.rs
crates/runtime/src/signal/: constants.rs  handlers.rs  ops.rs  tests.rs
crates/runtime/src/string_ops/: access.rs  basic.rs  case.rs  conversion.rs  cstring.rs  tests.rs
crates/runtime/src/tcp/: tests.rs
crates/runtime/src/terminal/: tests.rs
crates/runtime/src/test/: tests.rs
crates/runtime/src/time_ops/: tests.rs
crates/runtime/src/udp/: tests.rs
crates/runtime/src/variant_ops/: access.rs  make.rs  modify.rs  tests.rs
crates/runtime/src/weave/: resume.rs  spawn.rs  strand_lifecycle.rs  tests.rs  yield_op.rs
docs/: ARCHITECTURE.md  EXAMPLES.md  GLOSSARY.md  GRAMMAR.md  MIGRATION_6_0.md  ROADMAP.md  STDLIB_REFERENCE.md  SUMMARY.md  TESTING_GUIDE.md  language-guide.md
scripts/: check-bench-regression.sh
(+111 files in other folders)
