[workspace]
members = ["crates/core", "crates/runtime", "crates/compiler", "crates/lsp", "crates/repl", "crates/vim-line"]
resolver = "2"

[workspace.package]
version = "5.6.4"
edition = "2024"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"

[workspace.dependencies]
# Concurrency
may = { version = "0.3", features = ["rand_work_steal"] }
tokio = { version = "1", features = ["full"] }

# Memory management
bumpalo = "3.16"

# System calls
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
rustyline = "15"
home = "0.5"

# File watching
notify = "8"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Signal handling (Unix)
signal-hook = "0.3"

# Testing
tempfile = "3"
serial_test = "3"

# Encoding
base64 = "0.22"
hex = "0.4"

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
uuid = { version = "1.11", features = ["v4"] }
subtle = "2.6"  # Constant-time comparison
aes-gcm = "0.10"  # AES-256-GCM authenticated encryption
pbkdf2 = "0.12"   # Password-based key derivation
ed25519-dalek = { version = "2.1", features = ["rand_core"] }  # Ed25519 digital signatures

# HTTP client
ureq = { version = "2.12", features = ["tls"] }
url = "2.5"  # URL parsing for SSRF validation

# Regular expressions
regex = "1.11"

# Compression
flate2 = "1.0"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
